// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI: ExtendedText should match snapshot 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Poppins-Regular",
        "fontSize": 17,
        "letterSpacing": 0.37,
        "lineHeight": 22,
      },
      undefined,
    ]
  }
>
  test text
</Text>
`;

exports[`UI: ExtendedText should match snapshot 2`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Poppins-Regular",
        "fontSize": 20,
        "letterSpacing": 0.37,
        "lineHeight": 25,
      },
      undefined,
    ]
  }
>
  test title text
</Text>
`;

exports[`UI: ExtendedText should match snapshot 3`] = `
<Text
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  test secondary text
</Text>
`;
